--- a/src/features/AdminPage/PartnersPage/PartnerModal/PartnerModal.styles.scss
+++ b/src/features/AdminPage/PartnersPage/PartnerModal/PartnerModal.styles.scss
@@ -8,7 +8,9 @@
     justify-content: space-between;
     
     &-flex{ 
+        border: 2px solid green;
         display: flex;
+        justify-self: center;
     }
     
     p{
