--- a/src/features/AdminPage/NewStreetcode/MainNewStreetcode.styles.scss
+++ b/src/features/AdminPage/NewStreetcode/MainNewStreetcode.styles.scss
@@ -7,7 +7,8 @@ $articlesImg: "@assets/images/sources/Articles.png";
 .NewStreetcodeContainer {
     margin-top: f.pxToRem(100px);
     display: flex;
-    float: left;                               
+    float: left;
+    width: 100%;            
     
     .adminContainer
     {
