--- a/src/features/AdminPage/NewStreetcode/TextBlock/TextForm/AdditionTextBlock/AdditionalTextBlockAdminForm.styles.scss
+++ b/src/features/AdminPage/NewStreetcode/TextBlock/TextForm/AdditionTextBlock/AdditionalTextBlockAdminForm.styles.scss
@@ -5,81 +5,81 @@
 
  $factImg: "@assets/images/interesting-facts/WowFacts1.png";
 
- .AdditionalTextBlock {
-  .category-select-input{
-    .ant-select, .category-select-input{
-      width: f.pxToRem(200px);
-    }
-  }
+//  .AdditionalTextBlock {
+//   .category-select-input{
+//     .ant-select, .category-select-input{
+//       width: f.pxToRem(200px);
+//     }
+//   }
 
-   &.ant-modal {
-     .ant-modal-content {
-       @include mut.full-rounded(60px, $overflow: visible);
+//    &.ant-modal {
+//      .ant-modal-content {
+//        @include mut.full-rounded(60px, $overflow: visible);
 
-       padding: 0 !important;
-       box-shadow: 0 10px 16px 0 rgb(0 0 0 / 20%),
-         0 6px 20px 0 rgb(0 0 0 / 19%);
-         .saveButton{
-           width: 30%;   
-           justify-content: center;
-           left: 28%;
-           @include mut.with-font(ft.$roboto-font, 300, 15px, normal);
-           border-color: c.$dark-red-color;
-           color: c.$dark-red-color;
-           &:hover{
-               color: c.$pure-white-color;
-               background-color: c.$dark-red-color;
-           }
-         }
-         .sectionButton {
-          width: 30%;   
-                   justify-content: center;
-                   left: 28%;
-                   @include mut.with-font(ft.$roboto-font, 300, 15px, normal);
-                   border-color: c.$dark-red-color;
-                   color: c.$dark-red-color;
-                   &:hover{
-                       color: c.$pure-white-color;
-                       background-color: c.$dark-red-color;
-                   }
-        }
-     }
+//        padding: 0 !important;
+//        box-shadow: 0 10px 16px 0 rgb(0 0 0 / 20%),
+//          0 6px 20px 0 rgb(0 0 0 / 19%);
+//          .saveButton{
+//            width: 30%;   
+//            justify-content: center;
+//            left: 28%;
+//            @include mut.with-font(ft.$roboto-font, 300, 15px, normal);
+//            border-color: c.$dark-red-color;
+//            color: c.$dark-red-color;
+//            &:hover{
+//                color: c.$pure-white-color;
+//                background-color: c.$dark-red-color;
+//            }
+//          }
+//          .sectionButton {
+//           width: 30%;   
+//                    justify-content: center;
+//                    left: 28%;
+//                    @include mut.with-font(ft.$roboto-font, 300, 15px, normal);
+//                    border-color: c.$dark-red-color;
+//                    color: c.$dark-red-color;
+//                    &:hover{
+//                        color: c.$pure-white-color;
+//                        background-color: c.$dark-red-color;
+//                    }
+//         }
+//      }
 
-     .ant-modal-close {
-       @include mut.positioned-as(absolute, $left: 90%, $top: -25px);
-       @include mut.circular(80px, c.$pure-white-color);
+//      .ant-modal-close {
+//        @include mut.positioned-as(absolute, $left: 90%, $top: -25px);
+//        @include mut.circular(80px, c.$pure-white-color);
 
-       &:hover {
-         background-color: c.$modal-hover-color;
-       }
-     }
-   }
- }
+//        &:hover {
+//          background-color: c.$modal-hover-color;
+//        }
+//      }
+//    }
+//  }
 
- .forFansForm{
-     padding: 25px;
-     position: relative;
-     left: 5%;
-     @include mut.with-font(ft.$roboto-font, 300, 20px, normal);
-     color: c.$dark-red-color;
-     p{
-         padding: 5px;
-     }
+//  .forFansForm{
+//      padding: 25px;
+//      position: relative;
+//      left: 5%;
+//      @include mut.with-font(ft.$roboto-font, 300, 20px, normal);
+//      color: c.$dark-red-color;
+//      p{
+//          padding: 5px;
+//      }
 
-     .inputBlock{
-         width: 600px;
-         height: 480px;
-          input, textarea{
-             @include mut.with-font(ft.$roboto-font, 300, 20px, normal) ;
-         }
+//      .inputBlock{
+//          width: 600px;
+//          height: 480px;
+//           input, textarea{
+//              @include mut.with-font(ft.$roboto-font, 300, 20px, normal) ;
+//          }
 
-         input{
-             width: 60%;
-         }
-         textarea{
-             height: 70%;
-             width: 100%;
-             resize: none;
-         }
-     }
- }
+//          input{
+//              width: 60%;
+//          }
+//          textarea{
+//              height: 70%;
+//              width: 100%;
+//              resize: none;
+//          }
+//      }
+//  }
