--- a/src/app/layout/header/SearchBlock/SearchBlock.styles.scss
+++ b/src/app/layout/header/SearchBlock/SearchBlock.styles.scss
@@ -5,5 +5,7 @@
 
 .searchResultsBlock{
     width: 100%;
+    height: 418px;
+    overflow-y: scroll;
     @include mut.flexed($direction: column);
 }
