add-display-none

--- a/src/features/StreetcodePage/Streetcode.styles.scss
+++ b/src/features/StreetcodePage/Streetcode.styles.scss
@@ -39,3 +39,7 @@ $bgImg: '@assets/images/streetcode-card/background.png';
         background-image: none;
     }   
 }
+
+.display-none{
+    display: none !important;
+}
