--- a/src/app/layout/header/HeaderDrawer/HeaderDrawer.styles.scss
+++ b/src/app/layout/header/HeaderDrawer/HeaderDrawer.styles.scss
@@ -4,21 +4,6 @@
 @use "@sass/mixins/_utils.mixins.scss" as mut;
 @use "@sass/mixins/_vendor.mixins.scss" as vnd;
 
-.ant-drawer-header-title {
-  justify-content: flex-end;
-}
-
-.ant-drawer .ant-drawer-header{
-  padding: f.pxToRem(20px) f.pxToRem(15px);
-  border: 0;
-  .ant-drawer-header-title{
-    padding: 0;
-  }
-  .ant-drawer-close {
-    padding: 0;
-  }
-}
-
 .ant-drawer .ant-drawer-body{
   padding-top: 0;
   padding-bottom: f.pxToRem(33px);
@@ -62,8 +47,24 @@
   transition-duration: 0.5s;
 }
 
-.drawer{
+.drawerContainer{
   height: fit-content;
+}
+
+.ant-drawer .ant-drawer-header{
+  padding: f.pxToRem(20px) f.pxToRem(15px);
+  border: 0;
+  .ant-drawer-header-title{
+    padding: 0;
+  }
+  .ant-drawer-close {
+    padding: 0;
+  }
+}
+
+.drawerContainer,
+.ant-drawer-header-title {
+  justify-content: flex-end;
 }
 
 .headerDrawerContainer {
@@ -78,7 +79,7 @@
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1024px) {
   .headerDrawerContainer {
     @include mut.flexed(column, $align-items: flex-start, $gap: 20px);
     margin-left: f.pxToRem(40px);
@@ -99,7 +100,6 @@
     top: 24rem;
     padding-left: f.pxToRem(7px);
     @include mut.with-font($font-weight: 300, $font-size: 16px);
-  
     > * {
       display: inline;
       margin-top: pxToRem(40px);
@@ -115,9 +115,8 @@
     border-radius: 0 0 0 f.pxToRem(50px);
     height: f.pxToRem(525px);
   }
-  
   .ant-drawer-content {
     border-radius: 0 0 0 f.pxToRem(50px);
     height: f.pxToRem(525px);
-  }  
+  }
 }
