--- a/src/app/layout/header/HeaderDrawer/HeaderDrawerItem/HeaderDrawerItem.styles.scss
+++ b/src/app/layout/header/HeaderDrawer/HeaderDrawerItem/HeaderDrawerItem.styles.scss
@@ -18,8 +18,8 @@
 .headerItem:after {
     content: '';
     background-color: c.$dark-red-color;
+    color: c.$dark-red-color;
 
     @include mut.sized(100%, 2px);
     @include mut.positioned-as(absolute, $bottom: 0, $left: 0);
 }
-
