--- a/src/features/StreetcodePage/Streetcode.styles.scss
+++ b/src/features/StreetcodePage/Streetcode.styles.scss
@@ -41,3 +41,22 @@ $bgImg: '@assets/images/streetcode-card/background.png';
         background-image: none;
     }   
 }
+
+.loader-container{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #F4F4F4;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+    pointer-events: none;
+
+    .spinner{
+        z-index: 1001;
+    }
+
+}
