--- a/src/features/ProgressBar/ProgressBar.styles.scss
+++ b/src/features/ProgressBar/ProgressBar.styles.scss
@@ -7,12 +7,13 @@
 .progressBarContainer svg,
 .progressBarPopupContainer {
   @include vnd.vendored(transition, 'all .6s ease-out');
-  
 }
 
 .progressBarContainer {
   @include mut.sized(74px, 43px);
-  @include mut.positioned-as(fixed, $bottom: 0, $left: 57px);
+  position: fixed;
+  bottom: 0;
+  left: calc((100vw - 1200px) / 4 - 37px);
 
   z-index: 4;
   @include mut.flex-centered();
@@ -27,9 +28,7 @@
     background-color: c.$lighter-gray-color;
     cursor: pointer;
   }
-  @media screen and (max-width: 1024px) {
-    display: none;
-  }
+
   .progressBarPopupContainer {
     position: absolute;
     @include mut.sized(93px);
@@ -37,10 +36,9 @@
     @include mut.flex-centered();
     @include mut.full-rounded(20px, $overflow: visible);
     @include mut.rem-padded($top: 30px, $bottom: 30px);
-    box-shadow: 0 2px 15px 0 #B0B0B040; 
+
     background-color: c.$pure-white-color;
     box-shadow: 0 2px 15px 0 #B0B0B040;
-    //border: solid 2em rgba(#ffff, .1);
 
     @include vnd.vendored(transform, 'translateY(300px)');
 
@@ -48,20 +46,11 @@
       @include vnd.vendored(transform, 'translateY(calc(-50vh + 21.5px))');
     }
   }
-  .progressBarPopupContainer::before {
-    content: '';
-    position: absolute;
-    top: -30px;
-    left: -30px;
-    right: -30px;
-    bottom: -30px;
-    z-index: -1;
-    @include mut.full-rounded(20px, $overflow: visible);
-    backdrop-filter: blur(5px);
-    opacity: 0.5;
-    transform: scale(1.2);
-  }
+
   .progressBarPopupContent {
     @include mut.flex-centered($direction: column, $gap: 31px);
+  }
+  @media screen and (max-width: 1448px) {
+    display: none;
   }
 }
