--- a/src/features/StreetcodePage/MapBlock/CheckBox/CheckBox.styles.scss
+++ b/src/features/StreetcodePage/MapBlock/CheckBox/CheckBox.styles.scss
@@ -13,7 +13,6 @@
 
   z-index: 3;
   background: c.$pure-white-color;
-  // border: 3px solid #787878;
   box-shadow: 0px 7px 11px 2px rgba(0, 0, 0, 0.25);
   border-radius: 23px;
   @media screen and (max-width: 1024px) {
@@ -38,6 +37,9 @@
   line-height: 23px;
   text-align: center;
   margin-left: 11%;
+  @media screen and (max-width: 1024px) {
+  gap: 15px;
+  }
 }
 
 .checkbox-text{
