--- a/src/features/StreetcodePage/MainBlock/MainBlock.styles.scss
+++ b/src/features/StreetcodePage/MainBlock/MainBlock.styles.scss
@@ -57,7 +57,7 @@ $bgImg: '@assets/images/streetcode-card/background.png';
         }
     }
 
-    .mainBlock.bgr {
+    .mainBlock  {
         background-image: none;
     }
 }
