--- a/src/features/StreetcodePage/MainBlock/StreetcodeCard/StreetcodeCard.styles.scss
+++ b/src/features/StreetcodePage/MainBlock/StreetcodeCard/StreetcodeCard.styles.scss
@@ -73,7 +73,7 @@
   @include mut.rem-margined(13px, 3px, 0px, 0px);
   @include mut.rem-padded(0px, 5px, 0px, 0px);
   line-height: 23px;
-  max-height: 214px;
+  max-height: f.pxToRem(214px);
   overflow: auto;
   color: c.$lighter-black-color;
   &::-webkit-scrollbar {
@@ -83,16 +83,17 @@
 
 .teaserBlockContainer {
     position: relative;
+    height: f.pxToRem(214px);
 
     &:after {
-        content: initial;
+        content: '';
         position: absolute;
-        bottom: -5px;
+        bottom: 0px;
         left: 0;
         right: 5px;
         height: 6em;
         box-shadow: none;
-        background: linear-gradient(180deg, rgba(255, 255, 255, 0.75) 100%, rgba(255, 255, 255, 0) 0%);
+        background: linear-gradient(0deg, rgba(255,255,255,0.75) 0%, rgba(255,255,255,0.75) 2%, rgba(255,255,255,0.1) 21%);
         -webkit-text-fill-color: transparent;
     }
 }
@@ -246,6 +247,7 @@
           @include mut.hidden();
         }
         .audioBtn {
+          @include mut.full-rounded(8px);
           @include mut.with-font($font-weight: 400, $font-size: 14px);
           @include mut.sized(95%, 46px);
           .playCircle {
@@ -268,9 +270,16 @@
         height: unset ;
       }
       .cardFooter{
+        margin-top: f.pxToRem(39px) !important;
+        @include mut.rem-padded(0px, 0px, 5px, 0px);
         .audioBtn{
           width: 100%;
         }
+      }
+      .teaserBlockContainer {
+        height: fit-content;
+        &:after {
+        content: none;}
       }
       .teaserBlock {
         max-height: f.pxToRem(240px);
