--- a/src/features/StreetcodePage/Streetcode.styles.scss
+++ b/src/features/StreetcodePage/Streetcode.styles.scss
@@ -1,5 +1,6 @@
 @use "@sass/mixins/_utils.mixins.scss" as mut;
 @use "@sass/_utils.functions.scss" as f;
+@use "@assets/sass/variables/_variables.colors.scss" as c;
 
 $bgImg: '@assets/images/streetcode-card/background.png';
 
@@ -46,12 +47,9 @@ $bgImg: '@assets/images/streetcode-card/background.png';
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #F4F4F4;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include mut.sized(100%,100%);
+    background-color: c.$accented-gray-color;
+    @include mut.flexed($justify-content: center, $align-items: center);
     z-index: 100000;
     pointer-events: none;
 }
