fix centering timeticker

--- a/src/features/StreetcodePage/TimelineBlock/TimelineBlock.styles.scss
+++ b/src/features/StreetcodePage/TimelineBlock/TimelineBlock.styles.scss
@@ -9,7 +9,6 @@ $timelineSquareImg: "@assets/images/timeline/Square.png";
 
 .timelineContainer{
   width: 100vw;
-  max-width: f.pxToRem(1600px);
   align-self: center;
   align-items: center;
   margin: f.pxToRem(50px) auto;
@@ -62,7 +61,6 @@ $timelineSquareImg: "@assets/images/timeline/Square.png";
     .slick-current {
       border-radius: 40px;
       box-shadow: inset  0px 0px 0px 6px c.$pure-white-color;
-
       .timelineItemContent {
         margin-top: calc(1.5rem - 4px);
       }
@@ -72,16 +70,33 @@ $timelineSquareImg: "@assets/images/timeline/Square.png";
 }
 
 @media screen and (max-width: 1024px) {
+  
+.timelineContainer{
   .timelineContentContainer {
 
     .sliderClass{
-      @include mut.sized(100%);
-      @include mut.rem-margined($bottom: 10px, $top: 10px /*10px*/);
+      @include mut.rem-margined($bottom: 10px, $top: 10px);
     }
 
     .slick-track {
       @include mut.flexed($align-items: center, $gap: 14px);
+      .slick-slide >div{
+        height: min-content;
+        border-radius: 20px;
+        place-items: center;
+      }
+      .slick-slide {
+        border-radius: 20px;
+        border-width:f.pxToRem(7px) f.pxToRem(7px);
+        background-size:f.pxToRem(300px) f.pxToRem(189px);
+        background-position: center;  
+      }
+      .slick-current {
+        box-shadow: inset  0px 0px 0px 3px c.$pure-white-color;
+      }
+      
       
     }
   }
+}
 }
