--- a/src/features/StreetcodePage/TimelineBlock/TimelineItem/TimelineItem.styles.scss
+++ b/src/features/StreetcodePage/TimelineBlock/TimelineItem/TimelineItem.styles.scss
@@ -19,7 +19,7 @@
 }
 
 .timelineItemContent {
-  margin: f.pxToRem(24px) f.pxToRem(26px);
+  padding: f.pxToRem(24px) f.pxToRem(26px);
 
   .timelineItemMetadata {
     @include mut.truncated($line-num: 1);
@@ -48,10 +48,10 @@
 
 @media screen and (max-width: 1024px) {
   .timelineItem{
-    @include mut.sized(300px, 190px);
+    @include mut.sized(299px, 190px);
     border-radius: 15px;
     .timelineItemContent{
-      margin: f.pxToRem(13px);
+      padding: f.pxToRem(13px);
 
       .timelineItemMetadata{
         @include mut.with-font($font-family: ft.$roboto-font, $font-weight: 500, $font-size: 12px);
