--- a/src/features/StreetcodePage/InterestingFactsBlock/InterestingFactItem/InterestingFactItem.styles.scss
+++ b/src/features/StreetcodePage/InterestingFactsBlock/InterestingFactItem/InterestingFactItem.styles.scss
@@ -19,7 +19,9 @@
     @include mut.sized(100%, 250px);
     @include mut.rounded(33px, 33px);
     img{
-      max-height: 350px;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
   }
 
