fix photo and index view in the main card extend click on the slider for desktop version now it has 180 px for desptop and 100 for laptop and mobile

--- a/src/features/SlickSlider/SlickSlider.styles.scss
+++ b/src/features/SlickSlider/SlickSlider.styles.scss
@@ -63,7 +63,7 @@ li.slick-active button:before {
         flex-direction: row;
         .left{
             position: absolute;
-            width: 100px;
+            width: 180px;
             height: 100%;
             left: 0;
             opacity: 0;
@@ -71,11 +71,10 @@ li.slick-active button:before {
     
         .right{
             position: absolute;
-            width: 100px;
+            width: 180px;
             height: 100%;
             right: 0;
             opacity: 0;
-            width: 100px;
         }
     }
 }
@@ -95,5 +94,17 @@ li.slick-active button:before {
     .slick-next,
     .slick-prev {
         visibility:hidden;
+    }
+
+    .sliderClass {
+        .slider-item-container{
+            .left{
+                width: 100px;
+            }
+        
+            .right{
+                width: 100px;
+            }
+        }
     }
 }
