--- a/src/assets/sass/variables/_variables.colors.scss
+++ b/src/assets/sass/variables/_variables.colors.scss
@@ -43,3 +43,4 @@ $burger-menu-color: #7F7F7F !important;
 $input-outline-color: #E6E4E4 !important;
 $light-border-color: #DCDCDC !important;
 $partners-mobile-background-color: #FCFCFC !important;
+$streetcode-background-color:#FCFCFC !important;
