--- a/src/features/StreetcodePage/TextBlock/AdditionalTextBlock/AdditionalTextBlock.styles.scss
+++ b/src/features/StreetcodePage/TextBlock/AdditionalTextBlock/AdditionalTextBlock.styles.scss
@@ -31,7 +31,7 @@
 }
 
 @media screen and (max-width: 1024px){
-    .text{
+    .additionalText{
         font-size: f.pxToRem(16px);
         margin: f.pxToRem(10px);
         line-height: f.pxToRem(21px);
