--- a/src/features/AdditionalPages/ContactUsPage/MainBlock/ContactForm/ContactForm.styles.scss
+++ b/src/features/AdditionalPages/ContactUsPage/MainBlock/ContactForm/ContactForm.styles.scss
@@ -158,7 +158,7 @@
                 }
 
                 .ant-input-textarea-show-count .ant-input-data-count{
-                    margin-bottom: -18px;
+                    margin-bottom: f.pxToRem(-18px);
                 }
             }
         }
