Created store, Front admin for fans and made slider on streetcode page for fans

--- a/src/features/AdminPage/ForFansPage/ForFansMainPage.style.scss
+++ b/src/features/AdminPage/ForFansPage/ForFansMainPage.style.scss
@@ -15,3 +15,12 @@ $articlesImg: "@assets/images/sources/Articles.png";
          font-weight: 500;
        }
  }
+.ForFansPageContainer {
+  padding-top: 6.25rem;
+  display: flex;
+  gap: 0.625rem;
+}
+.forFansPage{
+  max-width: 100%;
+  width: 80vw;
+}
