--- a/src/features/AdminPage/ForFansPage/ForFansPage/ForFansPage.style.scss
+++ b/src/features/AdminPage/ForFansPage/ForFansPage/ForFansPage.style.scss
@@ -1,4 +1,4 @@
-@use "@sass/mixins/_utils.mixins.scss" as mut;
+@use '@sass/mixins/_utils.mixins.scss' as mut;
 @use "@sass/variables/_variables.fonts.scss" as ft;
 @use "@sass/variables/_variables.colors.scss" as c;
 @use "@sass/_utils.functions.scss" as f;
@@ -11,7 +11,6 @@ $articlesImg: "@assets/images/sources/Articles.png";
    
      margin-top: f.pxToRem(85px);
      margin-right: f.pxToRem(50px);
-     float: right;
      h1 {
         color: white;
         font-weight: 500;
